--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -9,68 +9,71 @@
 {% endblock %}
 
 {% block main_table %}
-    <table class="table">
-        <caption>
-            Rubros de ingresos para el per&iacute;odo {{ year }}
-            {% if periodo_list|keyvalue:year == 'F' %}
-                cierre
-            {% elif periodo_list|keyvalue:year == 'A' %}
-                intermedio
-            {% elif periodo_list|keyvalue:year == 'I' %}
-                inicial
-            {% endif %}
-            .
-        </caption>
-        <thead>
-        <tr class="bg-primary">
-            <th rowspan="2" colspan="1" style="vertical-align: middle">Rubros de ingresos</th>
-            <th rowspan="1" colspan="2" class="no-border-bottom text-center">
-                {% if periodo_list|keyvalue:year == 'I' %}
-                    Inicial
-                {% else %}
-                    Ejecutado
+    <div class="col-md-5 table-responsive">
+        <table class="table">
+            <caption>
+                Rubros de ingresos para el per&iacute;odo {{ year }}
+                {% if periodo_list|keyvalue:year == 'F' %}
+                    cierre
+                {% elif periodo_list|keyvalue:year == 'A' %}
+                    intermedio
+                {% elif periodo_list|keyvalue:year == 'I' %}
+                    inicial
                 {% endif %}
-            </th>
-        </tr>
-        <tr class="bg-primary">
-            <th colspan="1" class="no-border-top text-center">M. de c&oacute;rdobas</th>
-            <th colspan="1" class="no-border-top text-center">%</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for row in rubros %}
-            <tr>
-                {% if periodo_list|keyvalue:year == 'I' and row.inicial_asignado > 0 %}
-                    <td colspan="1">{{ row.subsubtipoingreso__origen__nombre }}</td>
-                    <td colspan="1" class="text-center">{{ row.inicial_asignado|million|intcomma }}</td>
-                    <td colspan="1" class="text-center">{{ row.inicial_asignado_percent }}</td>
-                {% else %}
-                    {% if row.ejecutado > 0 %}
-                        <td colspan="1">{{ row.subsubtipoingreso__origen__nombre }}</td>
-                        <td colspan="1" class="text-center">{{ row.ejecutado|million|intcomma|default:"0" }}</td>
-                        <td colspan="1" class="text-center">{{ row.ejecutado_percent }}</td>
+                .
+            </caption>
+            <thead>
+            <tr class="bg-primary">
+                <th rowspan="2" colspan="1" style="vertical-align: middle">Rubros de ingresos</th>
+                <th rowspan="1" colspan="2" class="no-border-bottom text-center">
+                    {% if periodo_list|keyvalue:year == 'I' %}
+                        Inicial
+                    {% else %}
+                        Ejecutado
                     {% endif %}
+                </th>
+            </tr>
+            <tr class="bg-primary">
+                <th colspan="1" class="no-border-top text-center">M. de c&oacute;rdobas</th>
+                <th colspan="1" class="no-border-top text-center">%</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for row in rubros %}
+                <tr>
+                    {% if periodo_list|keyvalue:year == 'I' and row.inicial_asignado > 0 %}
+                        <td colspan="1">{{ row.subsubtipoingreso__origen__nombre }}</td>
+                        <td colspan="1" class="text-center">{{ row.inicial_asignado|million|intcomma }}</td>
+                        <td colspan="1" class="text-center">{{ row.inicial_asignado_percent }}</td>
+                    {% else %}
+                        {% if row.ejecutado > 0 %}
+                            <td colspan="1">{{ row.subsubtipoingreso__origen__nombre }}</td>
+                            <td colspan="1" class="text-center">{{ row.ejecutado|million|intcomma|default:"0" }}</td>
+                            <td colspan="1" class="text-center">{{ row.ejecutado_percent }}</td>
+                        {% endif %}
+                    {% endif %}
+                </tr>
+            {% endfor %}
+            <tr>
+                <td colspan="1">TOTAL</td>
+                {% if periodo_list|keyvalue:year == 'I' %}
+                    <td colspan="1" class="text-center">{{ asignado|million|intcomma }}</td>
+                    <td colspan="1" class="text-center">{{ asignado_porcentaje|floatformat:"0" }}%</td>
+                {% else %}
+                    <td colspan="1" class="text-center">{{ ejecutado|million|intcomma|default:"0" }}</td>
+                    <td colspan="1" class="text-center">{{ ejecutado_porcentaje|floatformat:"0" }}%</td>
                 {% endif %}
             </tr>
-        {% endfor %}
-        <tr>
-            <td colspan="1">TOTAL</td>
-            {% if periodo_list|keyvalue:year == 'I' %}
-                <td colspan="1" class="text-center">{{ asignado|million|intcomma }}</td>
-                <td colspan="1" class="text-center">{{ asignado_porcentaje|floatformat:"0" }}%</td>
-            {% else %}
-                <td colspan="1" class="text-center">{{ ejecutado|million|intcomma|default:"0" }}</td>
-                <td colspan="1" class="text-center">{{ ejecutado_porcentaje|floatformat:"0" }}%</td>
-            {% endif %}
-        </tr>
-        </tbody>
-        <tfoot>
-        <tr>
-            <th colspan="3" rowspan="1" class="text-justify"><strong>Fuente: </strong>Elaboraci&oacute;n propia a partir
-                de transmunic.gob.ni<strong>.</strong></th>
-        </tr>
-        </tfoot>
-    </table>
+            </tbody>
+            <tfoot>
+            <tr>
+                <th colspan="3" rowspan="1" class="text-justify"><strong>Fuente: </strong>Elaboraci&oacute;n propia a
+                    partir
+                    de transmunic.gob.ni<strong>.</strong></th>
+            </tr>
+            </tfoot>
+        </table>
+    </div>
 {% endblock %}
 
 {% block section2 %}
