retornando important a atributo de clases css no-border-top  y no-border-bottom

--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -52,11 +52,11 @@
 }
 
 .no-border-top {
-    border-top: none;
+    border-top: none !important;
 }
 
 .no-border-bottom {
-    border-bottom: none;
+    border-bottom: none !important;
 }
 
 .border-sides {
