Mejorando titulos de portada

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -89,14 +89,15 @@
     </div>
     <div class="container pma-index-icons">
         <h3>
-            Consolidado {{ year }}
+            Consolidado de Presupuesto
             {% if periodo == 'F' %}
-                Final
+                de Cierre 
             {% elif periodo == 'A' %}
-                Actualizado
+                EJecuci&oacute;n Intermedia  
             {% else %}
-                Inicial
+                Inicial 
             {% endif %}
+	    {{ year }}
         </h3>
         <hr class="pma-line-3">
         <div class="row row-eq-height pma-spacing-bottom">
@@ -222,18 +223,19 @@
         <div class="container">
             <div class="row">
                 <h2>
-                    <strong>Destino</strong>
-                    de la inversi&oacute;n
+                    <strong>Areas</strong>
+                    de la Inversi&oacute;n
                 </h2>
                 <h4>
-                    Consolidado {{ year }}
+                    Consolidado de Presupuesto 
                     {% if periodo == 'F' %}
-                        Final
+                        Cierre
                     {% elif periodo == 'A' %}
-                        Actualizado
+                        Ejecuci&oacute;n Intermedia
                     {% else %}
                         Inicial
                     {% endif %}
+		    {{ year }}
                 </h4>
                 <br/>
                 <div class="col-md-12">
