reemplazando bubbletree js no minify => js minify de bubbletree

--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -332,7 +332,7 @@
     <!-- <script type="text/javascript" src="{% static 'js/jquery.history.js' %}"></script> -->
     <script type="text/javascript" src="{% static 'js/raphael-min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/Tween.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bubbletree.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bubbletree.min.js' %}"></script>
     <script type="text/javascript"
             src="http://assets.openspending.org/openspendingjs/master/lib/aggregator.js"></script>
     <script type="text/javascript" src="{% static 'js/cofog.js' %}"></script>
