--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -699,7 +699,7 @@
     <script type="text/javascript" src="{% static 'js/jquery-migrate.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/raphael-min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/Tween.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/bubbletree.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bubbletree.min.js' %}"></script>
     <script type="text/javascript" src="http://assets.openspending.org/openspendingjs/master/lib/aggregator.js"></script>
     <script type="text/javascript" src="{% static 'js/cofog.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/income.js' %}"></script>
