--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -50,7 +50,7 @@
                 <div class="col-lg-10 col-md-10 col-sm-11 col-xs-11">
                     <!-- Tab panes -->
                     <div class="tab-content">
-                        <div class="tab-pane pma-summary pma-index-inversion-icons  active" id="home">
+                        <div class="tab-pane pma-summary pma-index-inversion-icons  " id="home">
                             <div class="row categorias_inversion">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     {% for i in bubble_data_nojson.children %}
@@ -77,35 +77,45 @@
                         <div class="tab-pane" id="messages">
                             <div id="bar" class="view-alternative"> Chart will be rendered here</div>
                         </div>
-                        <div class="tab-pane" id="settings">
+                        <div class="tab-pane active" id="settings">
                             <table class="table table-striped table-hover">
                                 <thead>
                                 <tr class="bg-primary">
-                                    <th>Clasificaci&oacute;n</th>
+                                    <th rowspan="2" colspan="1">Clasificaci&oacute;n</th>
                                     {% if periodo_list|keyvalue:year == 'I' %}
-                                        <th class="text-right">Inicial</th>
+                                        <th rowspan="1" colspan="2" class="text-center no-border-bottom">Inicial</th>
                                     {% else %}
-                                        <th class="text-right">Ejecutado</th>
+                                        <th rowspan="1" colspan="2" class="text-center no-border-bottom">Ejecutado</th>
                                     {% endif %}
                                 </tr>
+                                <tr class="bg-primary">
+                                    <th rowspan="1" colspan="1" class="text-center no-border-top">M. de C&oacute;rdobas</th>
+                                    <th rowspan="1" colspan="1" class="text-center no-border-top">%</th>
+                                </tr>
                                 </thead>
+                                <tbody>
                                 {% for row in cat %}
                                     <tr>
-                                        <td class="text-left">{{ row.catinversion__nombre }}</td>
+                                        <td colspan="1" class="text-left">{{ row.catinversion__nombre }}</td>
                                         {% if periodo_list|keyvalue:year == 'I' %}
-                                            <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                                            <td colspan="1" class="text-center">{{ row.inicial_asignado|million|intcomma }}</td>
+                                            <td colspan="1" class="text-center"></td>
                                         {% else %}
-                                            <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
+                                            <td colspan="1" class="text-center">{{ row.ejecutado|million|intcomma }}</td>
+                                            <td colspan="1" class="text-center"></td>
                                         {% endif %}
                                     </tr>
                                 {% endfor %}
+                                </tbody>
                                 <tfoot>
                                 <tr class="">
-                                    <td>TOTAL</td>
+                                    <td colspan="1">TOTAL</td>
                                     {% if periodo_list|keyvalue:year == 'I' %}
-                                        <td class="text-right">{{ asignado|million|intcomma }}</td>
+                                        <td colspan="1" class="text-right">{{ asignado|million|intcomma }}</td>
+                                        <td colspan="1" class="text-right"></td>
                                     {% else %}
-                                        <td class="text-right">{{ ejecutado|million|intcomma|default:"0" }}</td>
+                                        <td colspan="1" class="text-right">{{ ejecutado|million|intcomma|default:"0" }}</td>
+                                        <td colspan="1" class="text-right"></td>
                                     {% endif %}
                                 </tr>
                                 </tfoot>
