--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -14,7 +14,7 @@
                         <li class="active">
                             <a href="#icons" aria-controls="icons" role="tab"
                                data-toggle="tab">
-                                  <span class="pma-icon fa fa-info-circle pma-fg-gray"
+                                  <span class="pma-icon pe-7s-info pma-fg-gray"
                                         aria-hidden="true" id="chart-bubble-1"
                                         data-chartcontainer="bubble-1">
                                   </span>
@@ -50,17 +50,18 @@
                 <div class="col-lg-10 col-md-10 col-sm-11 col-xs-11">
                     <!-- Tab panes -->
                     <div class="tab-content">
-                        <div class="tab-pane pma-summary pma-index-inversion-icons active" id="icons">
+                        <div class="tab-pane pma-summary pma-index-inversion-icons " id="icons">
                             <div class="row categorias_inversion">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     {% for i in bubble_data_nojson.children %}
                                         <div class="icons-inversion col-xs-6 col-sm-2 col-md-2 text-center height-categoria">
-                                            <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.name }}">
+                                            <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.name }}"
+                                                class="font-color-celeste">
                                                 <span class="info-box-icon pma-icon {{ i.slug }}"></span>
                                             </a>
                                             <h5 class="text-center">
                                                 <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.name }}"
-                                                   class="">
+                                                   class="font-color-celeste">
                                                     <strong>{{ i.label }}</strong>
                                                 </a>
                                                 <br/>
@@ -77,7 +78,7 @@
                         <div class="tab-pane" id="bar">
                             <div id="bar" class="view-alternative"> Chart will be rendered here</div>
                         </div>
-                        <div class="tab-pane" id="table_">
+                        <div class="tab-pane active" id="table_">
                             <table class="table table-striped table-hover">
                                 <thead>
                                 <tr class="bg-primary">
@@ -102,11 +103,11 @@
                                         {% if periodo_list|keyvalue:year == 'I' %}
                                             <td colspan="1"
                                                 class="text-center">{{ row.inicial_asignado|million|intcomma }}</td>
-                                            <td colspan="1" class="text-center"></td>
+                                            <td colspan="1" class="text-center">{{ row.ini_asig_porcentaje }}%</td>
                                         {% else %}
                                             <td colspan="1"
                                                 class="text-center">{{ row.ejecutado|million|intcomma }}</td>
-                                            <td colspan="1" class="text-center"></td>
+                                            <td colspan="1" class="text-center">{{ row.ejec_porcentaje }}%</td>
                                         {% endif %}
                                     </tr>
                                 {% endfor %}
@@ -114,15 +115,15 @@
                                     <td colspan="1">TOTAL</td>
                                     {% if periodo_list|keyvalue:year == 'I' %}
                                         <td colspan="1" class="text-center">{{ asignado|million|intcomma }}</td>
-                                        <td colspan="1" class="text-center"></td>
+                                        <td colspan="1" class="text-center">{{ asignado_porcentaje }}%</td>
                                     {% else %}
                                         <td colspan="1"
                                             class="text-center">{{ ejecutado|million|intcomma|default:"0" }}</td>
-                                        <td colspan="1" class="text-center"></td>
+                                        <td colspan="1" class="text-center">{{ ejecutado_porcentaje }}%</td>
                                     {% endif %}
                                 </tr>
                                 </tbody>
-                                <tfoot>
+                                <tfoot class="font-12px font-color-azul">
                                 <th colspan="{{ year_list|length }}" rowspan="1" class="text-justify">
                                     <strong>Fuente: </strong>Elaboraci&oacute;n
                                     propia a partir
